Wed Jul 20 23:02:18 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* io.c (rb_update_max_fd): remove parentheses. they are not in
	  macro.

Wed Jul 20 22:22:23 2011  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_update_max_fd): declaration moved from
	  internal.h.

	* file.c: ditto.

	* io.c: call rb_update_max_fd for each new fds.

	* process.c: ditto.

	* random.c: ditto.

	* ruby.c: ditto.

	* ext/io/console/console.c: ditto.

	* ext/openssl/ossl_bio.c: ditto.

	* ext/pty/pty.c: ditto.

	* ext/socket/init.c: ditto.

	* ext/socket/socket.c: ditto.

	* ext/socket/ancdata.c: ditto.

	* ext/socket/unixsocket.c: ditto.

Wed Jul 20 15:16:22 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/dl/handle.c (dlhandle_sym): clear previous error with dlerror()
	  before calling dlsym(). [ruby-dev:44091] [Bug #5021]

Wed Jul 20 07:16:26 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: mention Kernel#warn.  [ruby-core:38119] [Feature #5029]

Tue Jul 19 16:40:45 2011  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* cont.c (cont_save_thread): fix missing semicolon.

Tue Jul 19 16:25:15 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (UPDATE_MAXFD): removed.

Tue Jul 19 16:07:45 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_update_max_fd): new function.

	* internal.h (rb_update_max_fd): declare rb_update_max_fd.

	* thread_pthread.c (rb_thread_create_timer_thread): update max fd when
	  timer thread pipe is created.

Mon Jul 18 13:36:47 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: define a new BadAlias error class.

	* ext/psych/lib/psych/visitors/to_ruby.rb: raise an exception when
	  deserializing an alias that does not exist.

	* test/psych/test_merge_keys.rb: corresponding test.

Mon Jul 18 00:00:46 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/curses/curses.c: added the new class Curses::Pad, which
	  supports scrolling.  patch by Eric Hodel.  [Feature #4896]
	  [ruby-core:37206]
